--- a/source/examples/Deep InfoMax for images (benchmarking).ipynb
+++ b/source/examples/Deep InfoMax for images (benchmarking).ipynb
@@ -48,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "device = \"cuda:1\" if torch.cuda.is_available() else \"cpu\"\n",
+    "device = \"cuda:0\" if torch.cuda.is_available() else \"cpu\"\n",
     "#device = \"cpu\"\n",
     "print(\"Device: \" + device)\n",
     "print(f\"Devices count: {torch.cuda.device_count()}\")\n",
@@ -121,7 +121,7 @@
    "source": [
     "image_transform = torchvision.transforms.Compose([\n",
     "    torchvision.transforms.ToTensor(),\n",
-    "    #torchvision.transforms.Normalize((0.1307,), (0.3081,))\n",
+    "    #torchvision.transforms.Normalize((0.4914, 0.4822, 0.4465), (0.2023, 0.1994, 0.2010)),\n",
     "])"
    ]
   },
@@ -132,8 +132,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_dataset = CIFAR10(root=\"./.cache\", download=True, transform=image_transform)\n",
-    "test_dataset = CIFAR10(root=\"./.cache\", download=True, transform=image_transform, train=False)"
+    "#config[\"dataset\"] = \"MNIST\"\n",
+    "config[\"dataset\"] = \"CIFAR10\"\n",
+    "config[\"n_classes\"] = 10\n",
+    "\n",
+    "train_dataset = getattr(torchvision.datasets, config[\"dataset\"])(root=\"./.cache\", download=True, transform=image_transform)\n",
+    "test_dataset  = getattr(torchvision.datasets, config[\"dataset\"])(root=\"./.cache\", download=True, transform=image_transform, train=False)"
    ]
   },
   {
@@ -143,27 +147,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config[\"n_classes\"] = 10"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f7d7ca4b-2ec8-4d54-bbdf-1b302f1715f9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "config[\"batch_size_train\"] = 256\n",
-    "config[\"batch_size_test\"]  = 256"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2b73ff5a-9193-4b1d-8a14-c584b5c65e12",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "config[\"batch_size_train\"] = 512\n",
+    "config[\"batch_size_test\"]  = 1024\n",
+    "\n",
     "train_dataloader = torch.utils.data.DataLoader(train_dataset, batch_size=config[\"batch_size_train\"], shuffle=True)\n",
     "test_dataloader  = torch.utils.data.DataLoader(test_dataset, batch_size=config[\"batch_size_test\"], shuffle=False)\n",
     "eval_dataloader  = test_dataloader #torch.utils.data.DataLoader(train_dataset, batch_size=batch_size_train, shuffle=False)"
@@ -184,59 +170,108 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config[\"embedding_dim\"] = 256\n",
-    "config[\"discriminator_network_inner_dim\"] = 256\n",
-    "\n",
     "config[\"distribution\"] = \"normal\"\n",
-    "#config[\"distribution\"] = \"uniform\""
+    "#config[\"distribution\"] = \"uniform\"\n",
+    "\n",
+    "config[\"embedding_dim\"] = 2\n",
+    "normalization_layer = torch.nn.BatchNorm1d(config[\"embedding_dim\"], affine=False) if config[\"distribution\"] == \"normal\" else torch.nn.Sigmoid()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ad6e2c5-1973-4a32-8985-bc0364b038d9",
+   "id": "a8515223-9ede-4957-9e90-3da72e17f776",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config[\"backbone\"] = \"resnet18\"\n",
+    "\n",
+    "if config[\"backbone\"] == \"convnet\":\n",
+    "    backbone = Conv2dEmbedder(embedding_dim=config[\"embedding_dim\"])\n",
+    "else:\n",
+    "    backbone = getattr(torchvision.models, config[\"backbone\"])(num_classes=config[\"embedding_dim\"]).train()\n",
+    "    \n",
+    "    if config[\"dataset\"] in [\"CIFAR10\", \"CIFAR100\"]:\n",
+    "        backbone.conv1 = torch.nn.Conv2d(3, 64, kernel_size=3, stride=1, padding=2, bias=False)\n",
+    "        backbone.maxpool = torch.nn.Identity()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f65fae2-6ef7-4b1d-89f2-986a4ccdaa56",
    "metadata": {},
    "outputs": [],
    "source": [
     "embedder_network = torch.nn.Sequential(\n",
-    "    resnet18(num_classes=config[\"embedding_dim\"]),\n",
-    "    (torch.nn.BatchNorm1d(config[\"embedding_dim\"], affine=False) if config[\"distribution\"] == \"normal\" else torch.nn.Sigmoid())\n",
+    "    backbone,\n",
+    "    normalization_layer\n",
     ").to(device)\n",
-    "embedder_network.embedding_dim = config[\"embedding_dim\"]\n",
+    "embedder_network.embedding_dim = config[\"embedding_dim\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25755045-8e36-4ea3-825b-54c325a2f550",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config[\"discriminator_network\"] = \"DenseT\"\n",
+    "config[\"discriminator_network_inner_dim\"] = 256\n",
+    "config[\"discriminator_network_output_dim\"] = 256\n",
     "\n",
-    "discriminator_network = BasicDenseT(config[\"embedding_dim\"], config[\"embedding_dim\"], inner_dim=config[\"discriminator_network_inner_dim\"]).to(device)"
+    "_discriminator_network_factory = {\n",
+    "    \"SeparableT\": lambda: SeparableT(\n",
+    "        config[\"embedding_dim\"],\n",
+    "        config[\"embedding_dim\"],\n",
+    "        inner_dim=config[\"discriminator_network_inner_dim\"],\n",
+    "        output_dim=config[\"discriminator_network_output_dim\"],\n",
+    "    ).to(device),\n",
+    "    \"DenseT\": lambda: DenseT(\n",
+    "        config[\"embedding_dim\"],\n",
+    "        config[\"embedding_dim\"],\n",
+    "        inner_dim=config[\"discriminator_network_inner_dim\"]\n",
+    "    ).to(device),\n",
+    "    \"AdditiveGaussainT\": lambda: AdditiveGaussainT(p=0.99).to(device)\n",
+    "}\n",
+    "\n",
+    "discriminator_network = _discriminator_network_factory[config[\"discriminator_network\"]]()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1a6b9da-3df5-4647-81a1-6469dec4cde1",
+   "id": "c1bb2743-4399-432c-8361-79d9c22542bf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "config[\"input_p\"]  = 1.0e-1\n",
-    "config[\"output_p\"] = 5.0e-1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "94d7fcb0-c7fb-43e4-be75-ded99ba48c05",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "config[\"input_p\"]  = 2.0e-1\n",
+    "config[\"output_p\"] = 1.0e-1\n",
+    "\n",
     "model = infomax.embeddings.Embedder(\n",
     "    embedder_network,\n",
     "    discriminator_network,\n",
     "    infomax.channels.BoundedVarianceGaussianChannel(config[\"input_p\"]),\n",
-    "    infomax.channels.BoundedVarianceGaussianChannel(config[\"output_p\"]) if config[\"distribution\"] == \"normal\" else infomax.channels.BoundedSupportGaussianChannel(config[\"output_p\"]),\n",
+    "    #torchvision.transforms.Compose([\n",
+    "    #    torchvision.transforms.RandomResizedCrop((32, 32), scale=(0.2, 1.)),\n",
+    "    #    torchvision.transforms.RandomHorizontalFlip(),\n",
+    "    #    torchvision.transforms.RandomApply([\n",
+    "    #        torchvision.transforms.ColorJitter(0.4, 0.4, 0.4, 0.1)  # not strengthened\n",
+    "    #        #torchvision.transforms.ColorJitter(0.5, 0.5, 0.5, 0.5)  # strengthened\n",
+    "    #    ], p=0.8),\n",
+    "    #    torchvision.transforms.RandomGrayscale(p=0.2),\n",
+    "    #    #infomax.channels.BoundedVarianceGaussianChannel(config[\"input_p\"]).to(device)\n",
+    "    #    #torchvision.transforms.Normalize((0.4914, 0.4822, 0.4465), (0.2023, 0.1994, 0.2010)),\n",
+    "    #]),\n",
+    "    infomax.channels.BoundedVarianceGaussianChannel(config[\"output_p\"]) if config[\"distribution\"] == \"normal\" else infomax.channels.BoundedSupportUniformChannel(config[\"output_p\"]),\n",
     ").to(device)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14a03aad-3a13-4834-9ef7-7e2869796cc9",
+   "id": "2104bae6-f976-4ed8-92e1-7fe1bf8972a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,13 +287,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0bc5ff5b-5ae8-445b-a48c-b54c44ef647e",
+   "id": "cb1711b3-303f-4fdc-a44b-6c4aae880bbe",
    "metadata": {},
    "outputs": [],
    "source": [
     "config[\"n_epochs\"] = 2001\n",
     "config[\"embedder_network_lr\"] = 1.0e-3\n",
-    "config[\"discriminator_network_lr\"] = 1.0e-3"
+    "config[\"discriminator_network_lr\"] = 1.0e-3\n",
+    "\n",
+    "config[\"loss\"] = \"InfoNCELoss\"\n",
+    "config[\"marginalize\"] = \"product\""
    ]
   },
   {
@@ -275,14 +313,20 @@
     "    device,\n",
     "    callback=lambda history, epoch, step, infomax_embedder, train_dataloader, test_dataloader, device: classification_callback(\n",
     "        history, epoch, step, infomax_embedder, train_dataloader, test_dataloader, device,\n",
-    "        distribution_tests={},\n",
-    "        clustering_metrics={},\n",
-    "        classifiers={\n",
-    "            \"logistic_regression\": LogisticRegression,\n",
-    "        },\n",
+    "        #period=20,\n",
+    "        #distribution_tests={},\n",
+    "        #clustering_metrics={},\n",
+    "        #classifiers={\n",
+    "        #    \"logistic_regression\": lambda: DenseClassifier(config[\"embedding_dim\"], config[\"n_classes\"], device).to(device),\n",
+    "        #    #\"mlp\": lambda: DenseClassifier(config[\"embedding_dim\"], config[\"n_classes\"], device, n_layers=3).to(device),\n",
+    "        #    #\"knn\": lambda: KNeighborsClassifier(metric='cosine'),\n",
+    "        #    #\"mlp\": lambda: MLPClassifier(alpha=1.0, max_iter=1000),\n",
+    "        #},\n",
     "    ),\n",
-    "    embedder_network_lr=config[\"embedder_network_lr\"],\n",
-    "    discriminator_network_lr=config[\"discriminator_network_lr\"],\n",
+    "    optimizer_embedder_network=lambda params: torch.optim.Adam(params, lr=config[\"embedder_network_lr\"]),\n",
+    "    optimizer_discriminator_network=lambda params: torch.optim.Adam(params, lr=config[\"discriminator_network_lr\"]),\n",
+    "    loss=getattr(torchkld.loss, config[\"loss\"])(),\n",
+    "    marginalize=config[\"marginalize\"],\n",
     "    distribution=config[\"distribution\"],\n",
     "    n_epochs=config[\"n_epochs\"]\n",
     ")"
@@ -323,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6cf75102-311f-4804-89f4-248c96972ea4",
+   "id": "604a3de8-1b19-436e-911c-5b7ad00db554",
    "metadata": {},
    "outputs": [],
    "source": []
